[gd_scene load_steps=12 format=2]

[ext_resource path="res://res/button_lesson_card_hover.tres" type="StyleBox" id=1]
[ext_resource path="res://res/button_lesson_card_normal.tres" type="StyleBox" id=2]
[ext_resource path="res://scripts/LessonCard.gd" type="Script" id=3]
[ext_resource path="res://assets/rating/stars_0.png" type="Texture" id=4]
[ext_resource path="res://assets/rating/stars_2.png" type="Texture" id=5]
[ext_resource path="res://assets/rating/stars_5.png" type="Texture" id=6]
[ext_resource path="res://assets/rating/stars_3.png" type="Texture" id=7]
[ext_resource path="res://assets/rating/stars_4.png" type="Texture" id=8]
[ext_resource path="res://assets/rating/stars_1.png" type="Texture" id=9]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0.67451, 0.705882, 1 )
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10

[node name="LessonCard" type="Button" groups=["lesson_cards"]]
margin_right = 320.0
margin_bottom = 280.0
rect_min_size = Vector2( 320, 280 )
rect_clip_content = true
size_flags_horizontal = 3
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="Panel" parent="VBoxContainer"]
margin_right = 320.0
margin_bottom = 38.0
rect_min_size = Vector2( 0, 38 )
mouse_filter = 2
size_flags_horizontal = 3
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="VBoxContainer/Header"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Histoire de l'informatique et des systèmes embarqués"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 41.0
margin_right = 320.0
margin_bottom = 280.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginLeft" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 5.0
margin_bottom = 239.0
rect_min_size = Vector2( 5, 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 9.0
margin_right = 309.0
margin_bottom = 239.0
mouse_filter = 2
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 300.0
margin_bottom = 207.0
rect_min_size = Vector2( 300, 0 )
mouse_filter = 2
size_flags_horizontal = 6
size_flags_vertical = 6
custom_constants/vseparation = 2
custom_constants/hseparation = 0
columns = 2

[node name="TypeLabel" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
margin_right = 150.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.219608, 0.219608, 0.219608, 1 )
text = "Type de cours :"

[node name="TypeField" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
margin_left = 150.0
margin_right = 300.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.219608, 0.219608, 0.219608, 1 )
text = "TD"

[node name="SubjectLabel" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
margin_top = 24.0
margin_right = 150.0
margin_bottom = 38.0
custom_colors/font_color = Color( 0.219608, 0.219608, 0.219608, 1 )
text = "Matière :"

[node name="SubjectField" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
margin_left = 150.0
margin_top = 16.0
margin_right = 300.0
margin_bottom = 47.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.219608, 0.219608, 0.219608, 1 )
text = "Histoire Contemporaine"
autowrap = true

[node name="LessonCodeLabel" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
margin_top = 49.0
margin_right = 150.0
margin_bottom = 63.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.219608, 0.219608, 0.219608, 1 )
text = "Identifiant :"
autowrap = true

[node name="LessonCodeField" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
margin_left = 150.0
margin_top = 49.0
margin_right = 300.0
margin_bottom = 63.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.219608, 0.219608, 0.219608, 1 )
text = "HisInfo231"
autowrap = true

[node name="DurationLabel" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
margin_top = 65.0
margin_right = 150.0
margin_bottom = 79.0
custom_colors/font_color = Color( 0.219608, 0.219608, 0.219608, 1 )
text = "Durée :"

[node name="DurationField" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
margin_left = 150.0
margin_top = 65.0
margin_right = 300.0
margin_bottom = 79.0
custom_colors/font_color = Color( 0.219608, 0.219608, 0.219608, 1 )
text = "1h30"

[node name="ScheduleLabel" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
margin_top = 81.0
margin_right = 150.0
margin_bottom = 95.0
custom_colors/font_color = Color( 0.219608, 0.219608, 0.219608, 1 )
text = "Horaire :"

[node name="ScheduleField" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
margin_left = 150.0
margin_top = 81.0
margin_right = 300.0
margin_bottom = 95.0
custom_colors/font_color = Color( 0.219608, 0.219608, 0.219608, 1 )
text = "Jeudi 13h30 à 15h00"

[node name="ObligatoryLabel" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
margin_top = 97.0
margin_right = 150.0
margin_bottom = 111.0
custom_colors/font_color = Color( 0.219608, 0.219608, 0.219608, 1 )
text = "Obligatoire: "

[node name="ObligatoryField" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
margin_left = 150.0
margin_top = 97.0
margin_right = 300.0
margin_bottom = 111.0
custom_colors/font_color = Color( 0.219608, 0.219608, 0.219608, 1 )
text = "Non"

[node name="LocationLabel" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
margin_top = 113.0
margin_right = 150.0
margin_bottom = 127.0
custom_colors/font_color = Color( 0.219608, 0.219608, 0.219608, 1 )
text = "Etablissement: "

[node name="LocationField" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
margin_left = 150.0
margin_top = 113.0
margin_right = 300.0
margin_bottom = 127.0
custom_colors/font_color = Color( 0.219608, 0.219608, 0.219608, 1 )

[node name="RoomLabel" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
margin_top = 129.0
margin_right = 150.0
margin_bottom = 143.0
custom_colors/font_color = Color( 0.219608, 0.219608, 0.219608, 1 )
text = "Salle :"

[node name="RoomField" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
margin_left = 150.0
margin_top = 129.0
margin_right = 300.0
margin_bottom = 143.0
custom_colors/font_color = Color( 0.219608, 0.219608, 0.219608, 1 )
text = "104"

[node name="TeacherLabel" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
margin_top = 145.0
margin_right = 150.0
margin_bottom = 159.0
custom_colors/font_color = Color( 0.219608, 0.219608, 0.219608, 1 )
text = "Professeur :"

[node name="TeacherField" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
margin_left = 150.0
margin_top = 145.0
margin_right = 300.0
margin_bottom = 159.0
custom_colors/font_color = Color( 0.219608, 0.219608, 0.219608, 1 )
text = "Bill Gates"

[node name="DisplayedLabel" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
visible = false
margin_top = 177.0
margin_right = 150.0
margin_bottom = 191.0
custom_colors/font_color = Color( 0.219608, 0.219608, 0.219608, 1 )
text = "Affichée dans l'agenda:"

[node name="DisplayedField" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
visible = false
margin_left = 150.0
margin_top = 177.0
margin_right = 300.0
margin_bottom = 191.0
custom_colors/font_color = Color( 0.662745, 0, 0, 1 )
text = "NON"

[node name="RatingLabel" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
margin_top = 161.0
margin_right = 150.0
margin_bottom = 175.0
custom_colors/font_color = Color( 0.219608, 0.219608, 0.219608, 1 )
text = "Avis :"

[node name="StarsContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
margin_left = 150.0
margin_top = 161.0
margin_right = 300.0
margin_bottom = 175.0
custom_constants/separation = 0

[node name="Stars0" type="TextureRect" parent="VBoxContainer/HBoxContainer/VBoxContainer/GridContainer/StarsContainer"]
visible = false
margin_right = 90.0
margin_bottom = 16.0
texture = ExtResource( 4 )

[node name="Stars1" type="TextureRect" parent="VBoxContainer/HBoxContainer/VBoxContainer/GridContainer/StarsContainer"]
visible = false
margin_right = 90.0
margin_bottom = 16.0
texture = ExtResource( 9 )

[node name="Stars2" type="TextureRect" parent="VBoxContainer/HBoxContainer/VBoxContainer/GridContainer/StarsContainer"]
visible = false
margin_right = 90.0
margin_bottom = 16.0
texture = ExtResource( 5 )

[node name="Stars3" type="TextureRect" parent="VBoxContainer/HBoxContainer/VBoxContainer/GridContainer/StarsContainer"]
visible = false
margin_right = 90.0
margin_bottom = 16.0
texture = ExtResource( 7 )

[node name="Stars4" type="TextureRect" parent="VBoxContainer/HBoxContainer/VBoxContainer/GridContainer/StarsContainer"]
visible = false
margin_right = 90.0
margin_bottom = 16.0
texture = ExtResource( 8 )

[node name="Stars5" type="TextureRect" parent="VBoxContainer/HBoxContainer/VBoxContainer/GridContainer/StarsContainer"]
visible = false
margin_right = 90.0
margin_bottom = 16.0
texture = ExtResource( 6 )

[node name="MarginLeft2" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 313.0
margin_right = 318.0
margin_bottom = 239.0
rect_min_size = Vector2( 5, 5 )

[connection signal="gui_input" from="." to="." method="_on_LessonCard_gui_input"]
